manifests/transmission/middleware-oidc-transmission.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oidc-transmission
  namespace: transmission
spec:
  plugin:
    traefikoidc:
      logLevel: info
      providerURL: urn:k8s:secret:traefik-middleware-oidc:ISSUER
      clientID: urn:k8s:secret:traefik-middleware-oidc:CLIENT_ID
      clientSecret: urn:k8s:secret:traefik-middleware-oidc:SECRET
      sessionEncryptionKey: urn:k8s:secret:traefik-middleware-oidc:ENCRYPTION_KEY
      callbackURL: /oauth2/callback
      scopes:
        - openid
        - email
        - profile
