manifests/transmission/deploy-transmission.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: transmission
spec:
  selector:
    matchLabels:
      app: transmission
  replicas: 1
  template:
    metadata:
      labels:
        app: transmission
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:4.0.6-r4-ls296
          volumeMounts:
            - name: transmission-downloads
              mountPath: /downloads
            - name: transmission-config
              mountPath: /config
          ports:
            - containerPort: 9091
            - containerPort: 51413
              protocol: TCP
            - containerPort: 51413
              protocol: UDP
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 150m
              memory: 200Mi
      volumes:
        - name: transmission-downloads
          persistentVolumeClaim:
            claimName: transmission-downloads
        - name: transmission-config
          persistentVolumeClaim:
            claimName: transmission-config
