manifests/transmission/svc-transmission-torrent.yml
apiVersion: v1
kind: Service
metadata:
  name: transmission-torrent
  namespace: transmission
spec:
  selector:
    app: transmission
  ports:
    - name: torrent-tcp
      port: 51413
      targetPort: 51413
      protocol: TCP
    - name: torrent-udp
      port: 51413
      targetPort: 51413
      protocol: UDP
  type: NodePort
