manifests/transmission/svc-transmission.yml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: transmission
spec:
  selector:
    app: transmission
  ports:
    - name: http
      port: 80
      targetPort: 9091
