manifests/transmission/ingressroute-transmission.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: transmission
  namespace: transmission
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: <TRANSMISSION_MATCH>
      observability:
        accessLogs: true
        metrics: true
      services:
        - name: transmission
          namespace: transmission
          port: 80
  tls:
    secretName: domain-tls
    domains:
      - main: <TRANSMISSION_DOMAIN>
